# xzip

./: .gitignore  Cargo.toml  Makefile  README.md
src/: cli.rs  codec.rs  error.rs  filter.rs  lib.rs  main.rs  pack.rs  unpack.rs
tests/: integration.rs
