[package]
name = "xzip"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "ZIP CLI with explicit filename encoding for pack and unpack workflows."
license = "MIT"
repository = "https://github.com/DereckLee/xzip"
homepage = "https://github.com/DereckLee/xzip"
documentation = "https://docs.rs/xzip"
readme = "README.md"
keywords = ["zip", "cli", "encoding", "unicode", "winrar"]
categories = ["command-line-utilities", "compression", "encoding"]
exclude = [
    "AGENTS.md",
    ".github/**",
    ".idea/**",
    ".vscode/**",
    "target/**",
    "man/**",
    "*.zip",
]

[[bin]]
name = "xzip"
path = "src/main.rs"

[[bin]]
name = "gen-man"
path = "src/bin/gen-man.rs"
required-features = ["gen-man"]

[features]
gen-man = ["dep:clap_mangen"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = { version = "0.2", optional = true }
encoding_rs = "0.8"
globset = "0.4"
thiserror = "1"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
